Make PuzzleSolution an abstract class to reuse read input